[package]
name = "steel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glasses = "0.1.1"
nom = "7.1.1"
ntest = "0.8.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "random_programs"
harness = false
