[package]
name = "steel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
glasses = "0.1.1"
log = "0.4.17"
nom = "7.1.1"
ntest = "0.8.1"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
lazy_static = "1.4.0"

[[bench]]
name = "random_programs"
harness = false

[[bench]]
name = "known_programs"
harness = false
